https://bugs.webkit.org/show_bug.cgi?id=37567, :first-letter inside a :visited link is wrong color.  Make sure that the pseudo style caching allows visited link styles to hang off other pseudo styles.

Reviewed by Anders Carlsson.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::updateFirstLetter):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::getCachedPseudoStyle):



Canonical link: https://commits.webkit.org/48944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57657 268f45cc-cd09-0410-ab3c-d52691b4dbfc